--- a/graying.html
+++ b/graying.html
@@ -9,7 +9,7 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
    <div class="container-fluid mt-5" >
-      <img src="images/bgimageforgraying.jpg" alt="" width="1500px" height="600px" >
+      <img src="https://static.vecteezy.com/system/resources/thumbnails/041/889/172/small_2x/ai-generated-senior-lady-back-view-long-gray-hair-photo.jpg" alt="" width="1500px" height="600px" >
     </div>
     <!-- start  -->
     <div class="container">
