--- a/hairgrowth.html
+++ b/hairgrowth.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
    <!-- start  -->
     <div class="container-fluid mt-5" >
-      <img src="images/hairgrowthbgimage.jpg" alt="" width="1500px" height="600px" >
+      <img src="images/bgimagehairgrowth.webp" alt="" width="100%" >
     </div>
 <!-- end  -->
  
