--- a/graying.html
+++ b/graying.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Graying</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="graying.css">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
    <div class="container-fluid mt-5" >
-      <img src="https://static.vecteezy.com/system/resources/thumbnails/041/889/172/small_2x/ai-generated-senior-lady-back-view-long-gray-hair-photo.jpg" alt="" width="1500px" height="600px" >
+      <img class="img" src="assets/Hair Treatment images/grayingbgpic.jpeg" alt=""  >
     </div>
     <!-- start  -->
     <div class="container">
@@ -17,8 +18,8 @@
       <div class="col-LG-4 col-sm-2 col-md-3 mt-5 mx-auto" class="card w-75" class="card h-100"></div><div class="card mb-3" >
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="images/grayhairpic1.jpg" class="card-img" alt="..." height="300px" width="300px">
-    <img src="images/imagesgraying.webp" class="card-img" alt="..." height="300px" width="300px">
+      <img src="assets/Hair Treatment images/grayhairpic1.jpg" class="card-img" alt="..." height="300px" width="300px">
+    <img src="assets/Hair Treatment images/imagesgraying.webp" class="card-img" alt="..." height="300px" width="300px">
     </div>
     <div class="col-md-8" class="card w-75" class="card h-100">
        <div class="col-md-8">
@@ -54,8 +55,8 @@
       <div class="col-LG-4 col-sm-2 col-md-3 mt-5 mx-auto" class="card w-75" class="card h-100"></div><div class="card mb-3" >
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="images/grayhairpic.webp" class="card-img" alt="..." height="300px" width="300px">
-    <img src="https://cdn.shopify.com/s/files/1/0416/0249/files/Foods-to-reverse-grey-hair_BLOG_148eaccb-8967-4016-8118-44003d7a9ef6.jpg?v=1606359615" class="card-img" alt="..." height="300px" width="300px">
+      <img src="assets/Hair Treatment images/grayhairpic.webp" class="card-img" alt="..." height="300px" width="300px">
+    <img src="assets/Hair Treatment images/grayhairremedies.webp" class="card-img" alt="..." height="300px" width="300px">
     </div>
     <div class="col-md-8" class="card w-75" class="card h-100">
        <div class="col-md-8">
