--- a/hairgrowth.html
+++ b/hairgrowth.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Graying</title>
+    <title>hairGrowth</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="hairgrowth.css">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
    <!-- start  -->
     <div class="container-fluid mt-5" >
-      <img src="images/bgimagehairgrowth.webp" alt="" width="100%" >
+      <img class="img" src="assets/Hair Treatment images/bgimagehairgrowth.webp" alt=""  >
     </div>
 <!-- end  -->
  
@@ -20,8 +21,8 @@
       <div class="col-LG-4 col-sm-2 col-md-3 mt-5 mx-auto" class="card w-75" class="card h-100"></div><div class="card mb-3" >
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="images/hairgrowthpic2.jpg" class="card-img" alt="..." height="300px" width="300px">
-    <img src="images/hairgrowthpic1.jpg" class="card-img" alt="..." height="300px" width="300px">
+      <img src="assets/Hair Treatment images/hairgrowthpic2.jpg" class="card-img" alt="..." height="300px" width="300px">
+    <img src="assets/Hair Treatment images/hairgrowthpic1.jpg" class="card-img" alt="..." height="300px" width="300px">
     </div>
     <div class="col-md-8" class="card w-75" class="card h-100">
        <div class="col-md-8">
@@ -50,8 +51,8 @@
       <div class="col-LG-4 col-sm-2 col-md-3 mt-5 mx-auto" class="card w-75" class="card h-100"></div><div class="card mb-3" >
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="images/hairgrowthpic3.webp" class="card-img" alt="..." height="300px" width="300px">
-    <img src="images/hairgpic1.webp" class="card-img" alt="..." height="300px" width="300px">
+      <img src="assets/Hair Treatment images/hairgrowthpic3.webp" class="card-img" alt="..." height="300px" width="300px">
+    <img src="assets/Hair Treatment images/hairgpic1.webp" class="card-img" alt="..." height="300px" width="300px">
     </div>
     <div class="col-md-8" class="card w-75" class="card h-100">
        <div class="col-md-8">
