--- a/hairloss.html
+++ b/hairloss.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>\Hair loss</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="hairloss.css">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  
     <!-- start -->
     <div class="container-fluid mt-5" >
-      <img src="images/bgimageforhait.jpeg" alt="" width="1500px" height="600px" >
+      <img class="img" src="assets/Hair Treatment images/bgimghairloss.jpeg" alt=""   >
     </div> 
     <!-- end -->
     
@@ -20,7 +22,7 @@
       <div class="col-LG-4 col-sm-2 col-md-3 mt-5 mx-auto" class="card w-75" class="card h-100"></div><div class="card mb-3" >
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="images/hairlosspic.jpg" class="card-img" alt="..." height="300px" width="300px">
+      <img src="assets/Hair Treatment images/hairlosspic.jpg" class="card-img" alt="..." height="300px" width="300px">
     </div>
     <div class="col-md-8" class="card w-75" class="card h-100">
        <div class="col-md-8">
@@ -47,8 +49,8 @@
       <div class="col-LG-4 col-sm-2 col-md-3 mt-5 mt-5 mx-auto" class="card w-75" class="card h-100"></div><div class="card mb-3" >
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="images/hairloss2.jpg" class="card-img" alt="..." height="300px" width="300px" >
-      <img src="images/hairlosspic1.webp" class="card-img" alt="" height="300px" width="300px">
+      <img src="assets/Hair Treatment images/hairloss2.jpg" class="card-img" alt="..." height="300px" width="300px" >
+      <img src="assets/Hair Treatment images/hairlosspic1.webp" class="card-img" alt="" height="300px" width="300px">
     </div>
     <div class="col-md-8" class="card w-75" class="card h-100">
        <div class="col-md-8">
